--- a/app/src/main/res/layout/dialog_custom_notification.xml
+++ b/app/src/main/res/layout/dialog_custom_notification.xml
@@ -5,57 +5,61 @@
     android:gravity="center_horizontal"
     android:minWidth="350dp"
     android:orientation="vertical">
-    
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="16sp"
         android:padding="20dp"
-        android:textStyle="bold"
-        android:text="@string/custom_reminder"/>
-    
+        android:text="@string/custom_reminder"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:paddingStart="20dp"
         android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:text="@string/custom_reminder_hint"
         android:textColor="@color/black"
-        android:text="Set reminder up to 20 days."/>
-    
+        android:textSize="16sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="15dp"
-        android:paddingStart="20dp"
+        android:orientation="horizontal"
         android:paddingEnd="20dp"
-        android:orientation="horizontal">
+        android:paddingStart="20dp">
 
         <EditText
             android:id="@+id/number"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:hint="@string/value"
             android:inputType="number"
             android:maxLength="4"
-            android:textSize="16sp"
-            android:layout_weight="2"/>
+            android:textSize="16sp" />
 
         <Spinner
-            android:id="@+id/spinner_1st"
-            android:layout_width="0dp"
-            android:layout_weight="5"
-            android:textSize="16sp"
+            android:id="@+id/spinner_timescale"
             style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:layout_height="wrap_content"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:entries="@array/time_scale_values"
+
+            android:textSize="16sp" />
 
         <Spinner
-            android:id="@+id/spinner_2nd"
-            android:layout_width="0dp"
-            android:layout_weight="5"
+            android:id="@+id/spinner_timedirection"
             style="@style/Base.Widget.AppCompat.Spinner.Underlined"
-            android:textSize="16sp"
-            android:layout_height="wrap_content"/>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:entries="@array/time_direction_values"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
@@ -76,13 +80,12 @@
 
         <Button
             android:id="@+id/btn_ok"
+            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:background="@android:color/transparent"
             android:text="@string/ok" />
     </LinearLayout>
-    
-    
+
 
 </LinearLayout>
