--- a/app/src/main/res/layout/repeat_details_layout.xml
+++ b/app/src/main/res/layout/repeat_details_layout.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/only_once"
+            android:text="@string/only_oncehihine"
             android:textSize="14sp" />
 
         <RadioButton
