--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -38,6 +38,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/activity_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
