--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -146,9 +146,10 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/request_message_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/interventions_list"
+            android:text="@string/interventions_list_system"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
