--- a/app/src/main/res/layout/activity_interventions.xml
+++ b/app/src/main/res/layout/activity_interventions.xml
@@ -318,16 +318,15 @@
                     android:textSize="14sp"
                     android:visibility="gone" />
 
-                <TextView
+                <RadioButton
                     android:id="@+id/txt_custom_interv_notif"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:layout_marginStart="32dp"
                     android:layout_marginTop="10dp"
                     android:onClick="clickCustomIntervNotification"
                     android:text="@string/custom"
-                    android:textSize="15sp" />
+                    android:textSize="14sp" />
 
             </RadioGroup>
 
