--- a/app/src/main/res/layout/survey1_element.xml
+++ b/app/src/main/res/layout/survey1_element.xml
@@ -23,13 +23,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="13dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey1_scale0"
+            android:text="@string/_0"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -38,7 +40,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey1_scale1"
+            android:text="@string/_1"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/_2"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -47,7 +58,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey1_scale2"
+            android:text="@string/_3"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -56,19 +67,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey1_scale3"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="12sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/survey1_scale4"
+            android:text="@string/_4"
             android:textAlignment="viewEnd"
             android:textColor="@color/black"
             android:textSize="12sp" />
+
+
 
     </LinearLayout>
 
