--- a/app/src/main/res/layout/survey3_element.xml
+++ b/app/src/main/res/layout/survey3_element.xml
@@ -18,18 +18,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:max="6"
+        android:max="4"
         android:theme="@style/Widget.AppCompat.SeekBar.Discrete" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginEnd="13dp">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey3_scale0"
+            android:text="@string/_1"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -38,7 +40,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey3_scale1"
+            android:text="@string/_2"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="@string/_3"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -47,8 +58,17 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/survey3_scale2"
+            android:text="@string/_4"
             android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/_5"
+            android:textAlignment="viewEnd"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
