--- a/app/src/main/res/layout/survey1_element.xml
+++ b/app/src/main/res/layout/survey1_element.xml
@@ -23,15 +23,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginEnd="13dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_0"
+            android:text="@string/survey1_scale0"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -40,7 +38,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_1"
+            android:text="@string/survey1_scale1"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -49,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:text="@string/_2"
+            android:text="@string/survey1_scale2"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -58,7 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_3"
+            android:text="@string/survey1_scale3"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="12sp" />
@@ -67,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/_4"
+            android:text="@string/survey1_scale4"
             android:textAlignment="viewEnd"
             android:textColor="@color/black"
             android:textSize="12sp" />
